@@ -2,6 +2,7 @@
 ======================
 
 3.5.0.0 (not yet released)
++ rfe #2021981 [interface] Add support for mass prefix change.
 
 3.4.1.0 (not yet released)
 
